--- a/CECePortal/assets/styles/login.css
+++ b/CECePortal/assets/styles/login.css
@@ -144,6 +144,7 @@ body {
     font-weight: bold;
     width: 100%;
     margin-bottom: 0.5rem;
+    font-size: 0.89rem;
     /* opacity: 100%; */
 }
 
