--- a/CECePortal/assets/styles/login.css
+++ b/CECePortal/assets/styles/login.css
@@ -1,5 +1,10 @@
+
 :root {
-    --primary-color: hsl(125, 65%, 33%);
+    --primary-color: hsl(122, 39%, 49%);
+    --primary-color-darker: hsl(125, 65%, 33%);
+       --text-color: #252b42;
+    --second-text-color: #737373;
+    --danger-color: #e74040; --primary-color: hsl(125, 65%, 33%);
     --secondary-color: hsl(0, 0%, 96%);
 }
 
@@ -100,6 +105,7 @@ body {
 
 .form-links a:hover {
     text-decoration: underline;
+    color: var(--primary-color);
 }
 
 .show-password {
@@ -116,7 +122,7 @@ body {
     font-size: 0.9rem;
     line-height: 1.5;
     margin-top: 20px;
-}
+    }
 
 @media (max-width: 768px) {
     .login-container {
@@ -139,6 +145,6 @@ body {
 
     .header-icons {
         position: static;
-        margin-top: 20px;
+        margin-top:0.6rem;
     }
 }
