--- a/CECePortal/assets/styles/login.css
+++ b/CECePortal/assets/styles/login.css
@@ -1,11 +1,12 @@
 
 :root {
-    --primary-color: hsl(122, 39%, 49%);
     --primary-color-darker: hsl(125, 65%, 33%);
-       --text-color: #252b42;
+    --primary-color: hsl(122, 39%, 49%);
+    --secondary: #f3cd03;
+    --text-color: #252b42;
     --second-text-color: #737373;
-    --danger-color: #e74040; --primary-color: hsl(125, 65%, 33%);
-    --secondary-color: hsl(0, 0%, 96%);
+    --danger-color: #e74040;
+    --background-color: #f7faff;
 }
 
 body {
