--- a/CECePortal/assets/styles/verifycentre.css
+++ b/CECePortal/assets/styles/verifycentre.css
@@ -5,9 +5,10 @@
     box-sizing: border-box;
 }
 
+
 :root {
-    --primary-color: hsl(125, 65%, 33%);
-    --primary-color-darker: hsl(122, 39%, 49%);
+    --primary-color-darker: hsl(125, 65%, 33%);
+    --primary-color: hsl(122, 39%, 49%);
     --secondary: #f3cd03;
     --text-color: #252b42;
     --second-text-color: #737373;
@@ -80,7 +81,7 @@ body {
 
 /* Left Panel */
 .left-panel {
-    background-color: var(--primary-color-darker);
+    background-color: var(--primary-color);
     color: var(--background-color);
     flex: 1;
     display: flex;
@@ -191,7 +192,7 @@ body {
 }
 
 .right-panel .form-actions button {
-    background-color: var(--primary-color-darker);
+    background-color: var(--primary-color);
     color: var(--background-color);
     border: none;
     padding: 0.75rem;
@@ -204,7 +205,7 @@ body {
 }
 
 .right-panel .form-actions button:hover {
-    background: var(--primary-color);
+    background: var(--primary-color-darker);
 }
 
 .right-panel .form-actions a {
