--- a/CECePortal/assets/styles/login.css
+++ b/CECePortal/assets/styles/login.css
@@ -125,6 +125,35 @@ body {
     margin-top: 20px;
     }
 
+/* Selections */
+/* Unselectable class */
+.unselectable {
+    user-select: none;
+    /* Prevents text selection */
+    -webkit-user-select: none;
+    /* Safari */
+    -moz-user-select: none;
+    /* Firefox */
+    -ms-user-select: none;
+    /* IE/Edge */
+    -o-user-select: none;
+    /* Opera */
+}
+
+/* Unselectable class */
+.selectable {
+    user-select: none;
+    /* Prevents text selection */
+    -webkit-user-select: none;
+    /* Safari */
+    -moz-user-select: none;
+    /* Firefox */
+    -ms-user-select: none;
+    /* IE/Edge */
+    -o-user-select: none;
+    /* Opera */
+}
+
 @media (max-width: 768px) {
     .login-container {
         flex-direction: column;
