--- a/CECePortal/assets/styles/home.css
+++ b/CECePortal/assets/styles/home.css
@@ -140,7 +140,7 @@ nav .nav-wrapper .logo {
     line-height: 2rem;
     letter-spacing: 0.1px;
     color: var(--text-color);
-    margin-right: 5.1875rem;
+    margin-right: 4.1875rem;
 }
 
 nav .nav-wrapper ul {
@@ -178,6 +178,7 @@ nav .login {
     color: var(--primary-color);
     letter-spacing: 0.2px;
     cursor: pointer;
+    /* margin-left: 2.1875rem; */
 }
 
 nav .signup {
@@ -190,7 +191,7 @@ nav .signup {
     gap: 0.9375rem;
     border-radius: 5px;
     transition: background 0.1s ease-in-out;
-    margin-right: 5.1875rem;
+    /* margin-left: 1.1875rem; */
 }
 
 nav .signup:hover,
@@ -405,42 +406,4 @@ footer {
 
 .hide-on-mobile {
     display: none;
-}
-
-/* Notification Styling */
-.notification {
-    position: fixed;
-    top: 20px;
-    right: 20px;
-    padding: 10px 20px;
-    background-color: #f8d7da;
-    color: #721c24;
-    border: 1px solid #f5c6cb;
-    border-radius: 5px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    font-size: 0.9rem;
-    z-index: 1000;
-    display: none;
-    /* Hidden by default */
-    width: auto;
-    max-width: 300px;
-}
-
-/* Notification Types */
-.notification.error {
-    background-color: #f8d7da;
-    color: #721c24;
-    border-color: #f5c6cb;
-}
-
-.notification.success {
-    background-color: #d4edda;
-    color: #155724;
-    border-color: #c3e6cb;
-}
-
-.notification.info {
-    background-color: #d1ecf1;
-    color: #0c5460;
-    border-color: #bee5eb;
 }
