--- a/CECePortal/assets/styles/verifycentre.css
+++ b/CECePortal/assets/styles/verifycentre.css
@@ -236,6 +236,24 @@ body {
     max-width: 300px;
 }
 
+/* Hide number wheel */
+/* For Webkit-based browsers (Chrome, Safari) */
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* For Firefox */
+input[type=number] {
+    -moz-appearance: textfield;
+}
+
+/* For Edge and other browsers */
+input[type=number] {
+    appearance: textfield;
+}
+
 /* Notification Types */
 .notification.error {
     background-color: #f8d7da;
