--- a/CECePortal/CECePortal/assets/styles/register.css
+++ b/CECePortal/CECePortal/assets/styles/register.css
@@ -5,10 +5,9 @@
     box-sizing: border-box;
 }
 
-
 :root {
-    --primary-color-darker: hsl(125, 65%, 33%);
-    --primary-color: hsl(122, 39%, 49%);
+    --primary-color: hsl(125, 65%, 33%);
+    --primary-color-darker: hsl(122, 39%, 49%);
     --secondary: #f3cd03;
     --text-color: #252b42;
     --second-text-color: #737373;
@@ -81,7 +80,7 @@ body {
 
 /* Left Panel */
 .left-panel {
-    background-color: var(--primary-color);
+    background-color: var(--primary-color-darker);
     color: var(--background-color);
     flex: 1;
     display: flex;
@@ -192,7 +191,7 @@ body {
 }
 
 .right-panel .form-actions button {
-    background-color: var(--primary-color);
+    background-color: var(--primary-color-darker);
     color: var(--background-color);
     border: none;
     padding: 0.75rem;
@@ -205,7 +204,7 @@ body {
 }
 
 .right-panel .form-actions button:hover {
-    background: var(--primary-color-darker);
+    background: var(--primary-color);
 }
 
 .right-panel .form-actions a {
@@ -215,62 +214,6 @@ body {
     display: block;
     /* Ensure the link appears as a block element */
     text-align: center;
-}
-
-/* Notification Styling */
-.notification {
-    position: fixed;
-    top: 20px;
-    right: 20px;
-    padding: 10px 20px;
-    background-color: #f8d7da;
-    color: #721c24;
-    border: 1px solid #f5c6cb;
-    border-radius: 5px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    font-size: 0.9rem;
-    z-index: 1000;
-    display: none;
-    /* Hidden by default */
-    width: auto;
-    max-width: 300px;
-}
-
-/* Hide number wheel */
-/* For Webkit-based browsers (Chrome, Safari) */
-input[type=number]::-webkit-inner-spin-button,
-input[type=number]::-webkit-outer-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
-}
-
-/* For Firefox */
-input[type=number] {
-    -moz-appearance: textfield;
-}
-
-/* For Edge and other browsers */
-input[type=number] {
-    appearance: textfield;
-}
-
-/* Notification Types */
-.notification.error {
-    background-color: #f8d7da;
-    color: #721c24;
-    border-color: #f5c6cb;
-}
-
-.notification.success {
-    background-color: #d4edda;
-    color: #155724;
-    border-color: #c3e6cb;
-}
-
-.notification.info {
-    background-color: #d1ecf1;
-    color: #0c5460;
-    border-color: #bee5eb;
 }
 
 /* Responsiveness */
