--- a/CECePortal/assets/styles/register.css
+++ b/CECePortal/assets/styles/register.css
@@ -122,7 +122,7 @@ body {
 
 .left-panel ul li {
     margin-bottom: 0.5rem;
- }
+}
 
 .left-panel a {
     color: var(--background-color);
@@ -230,5 +230,16 @@ body {
         min-width: 20%;
         max-height: 100%;
         min-height: 20;
+    }
+
+    .left-panel ul li {
+        margin-bottom: 0.5rem;
+        align-items: center;
+        list-style-type: none;
+    }
+
+    .left-panel a {
+        color: var(--background-color);
+        text-decoration: underline;
     }
 }
