--- a/CECePortal/assets/styles/login.css
+++ b/CECePortal/assets/styles/login.css
@@ -114,14 +114,14 @@ body {
 }
 
 .login-left.login-hints ul {
-    list-style-type:none;
+    list-style-type: none;
     padding: 0;
     margin-bottom: 6rem;
 }
 
 .login-left ul li {
     margin-bottom: 0.5rem;
-    align-items:center;
+    align-items: center;
 }
 
 .show-password {
@@ -187,6 +187,25 @@ input[type=number] {
     appearance: textfield;
 }
 
+/* Notification Types */
+.notification.error {
+    background-color: #f8d7da;
+    color: #721c24;
+    border-color: #f5c6cb;
+}
+
+.notification.success {
+    background-color: #d4edda;
+    color: #155724;
+    border-color: #c3e6cb;
+}
+
+.notification.info {
+    background-color: #d1ecf1;
+    color: #0c5460;
+    border-color: #bee5eb;
+}
+
 @media (max-width: 768px) {
     .login-container {
         flex-direction: column;
@@ -200,10 +219,10 @@ input[type=number] {
 
     .login-left ul li {
         margin-bottom: 0.5rem;
-        align-items:center;
+        align-items: center;
         list-style-type: none;
     }
-    
+
     .form-actions {
         flex-direction: column;
     }
