--- a/CECePortal/assets/styles/register.css
+++ b/CECePortal/assets/styles/register.css
@@ -216,6 +216,25 @@ body {
     text-align: center;
 }
 
+/* Notification Types */
+.notification.error {
+    background-color: #f8d7da;
+    color: #721c24;
+    border-color: #f5c6cb;
+}
+
+.notification.success {
+    background-color: #d4edda;
+    color: #155724;
+    border-color: #c3e6cb;
+}
+
+.notification.info {
+    background-color: #d1ecf1;
+    color: #0c5460;
+    border-color: #bee5eb;
+}
+
 /* Responsiveness */
 @media (max-width: 768px) {
     .registration-container {
