--- a/CECePortal/assets/styles/verifycentre.css
+++ b/CECePortal/assets/styles/verifycentre.css
@@ -217,24 +217,6 @@ body {
     text-align: center;
 }
 
-/* Notification Styling */
-.notification {
-    position: fixed;
-    top: 20px;
-    right: 20px;
-    padding: 10px 20px;
-    background-color: #f8d7da;
-    color: #721c24;
-    border: 1px solid #f5c6cb;
-    border-radius: 5px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    font-size: 0.9rem;
-    z-index: 1000;
-    display: none;
-    /* Hidden by default */
-    width: auto;
-    max-width: 300px;
-}
 
 /* Hide number wheel */
 /* For Webkit-based browsers (Chrome, Safari) */
@@ -255,23 +237,34 @@ input[type=number] {
 }
 
 /* Notification Types */
+#notification {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    padding: 10px 20px;
+    border-radius: 5px;
+    z-index: 1000;
+    display: none;
+    /* Hidden by default */
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+/* Notification Types */
 .notification.error {
     background-color: #f8d7da;
     color: #721c24;
-    border-color: #f5c6cb;
 }
 
 .notification.success {
     background-color: #d4edda;
     color: #155724;
-    border-color: #c3e6cb;
 }
 
 .notification.info {
     background-color: #d1ecf1;
     color: #0c5460;
-    border-color: #bee5eb;
 }
+
 
 /* Responsiveness */
 @media (max-width: 768px) {
