--- a/CECePortal/assets/styles/register.css
+++ b/CECePortal/assets/styles/register.css
@@ -241,8 +241,8 @@ body {
 }
 
 .notification.info {
-    background-color: #d1ecf1;
-    color: #0c5460;
+    background-color: #fff3cd;
+    color: #856404;
 }
 
 
