--- a/CECePortal/assets/styles/verifycentre.css
+++ b/CECePortal/assets/styles/verifycentre.css
@@ -261,8 +261,8 @@ input[type=number] {
 }
 
 .notification.info {
-    background-color: #d1ecf1;
-    color: #0c5460;
+    background-color: #fff3cd;
+    color: #856404;
 }
 
 
