--- a/CECePortal/assets/styles/centre-enroll.css
+++ b/CECePortal/assets/styles/centre-enroll.css
@@ -122,8 +122,8 @@ button:hover {
 }
 
 .notification.info {
-    background-color: #d1ecf1;
-    color: #0c5460;
+    background-color: #fff3cd;
+    color: #856404;
 }
 
 
