--- a/CECePortal/assets/styles/index.css
+++ b/CECePortal/assets/styles/index.css
@@ -408,3 +408,19 @@ footer {
 .hide-on-mobile {
     display: none;
 }
+
+/* Notification Types */
+.notification.error {
+    background-color: #f8d7da;
+    color: #721c24;
+}
+
+.notification.success {
+    background-color: #d4edda;
+    color: #155724;
+}
+
+.notification.info {
+    background-color: #fff3cd;
+    color: #856404;
+}
