--- a/CECePortal/assets/styles/students_enroll.css
+++ b/CECePortal/assets/styles/students_enroll.css
@@ -6,8 +6,8 @@
 }
 
 :root {
-    --primary-color: hsl(125, 65%, 33%);
-    --primary-color-darker: hsl(122, 39%, 49%);
+    --primary-color-darker: hsl(125, 65%, 33%);
+    --primary-color: hsl(122, 39%, 49%);
     --secondary: #f3cd03;
     --text-color: #252b42;
     --background-color: #f7faff;
@@ -31,7 +31,7 @@ body {
 
 h2 {
     text-align: center;
-    color: var(--primary-color);
+    color: var(--background-color);
     margin-bottom: 20px;
 }
 
@@ -41,7 +41,8 @@ h2 {
     gap: 20px;
 }
 
-.left-panel, .right-panel {
+.left-panel,
+.right-panel {
     flex: 1;
 }
 
@@ -49,7 +50,8 @@ h2 {
 .left-panel .logo {
     display: block;
     margin: 0 auto 20px auto;
-    max-width: 100px; /* Adjust as needed */
+    max-width: 100px;
+    /* Adjust as needed */
 }
 
 
@@ -63,11 +65,25 @@ h2 {
 
 .left-panel p {
     margin-bottom: 15px;
+    margin-left: 20px;
 }
 
 .left-panel a {
     color: #fff;
     text-decoration: underline;
+}
+
+.left-panel ul {
+    list-style-type: disc;
+    padding: 0;
+    margin-bottom: 6rem;
+    align-items: center;
+}
+
+.left-panel ul li {
+    margin-bottom: 0.4rem;
+    margin-left: 40px;
+    align-items: center;
 }
 
 .right-panel {
@@ -210,7 +226,22 @@ input[type=number] {
         flex-direction: column;
     }
 
-    .left-panel, .right-panel {
+    .left-panel,
+    .right-panel {
         min-width: 100%;
+    }
+
+    .left-panel ul {
+        list-style-type: none;
+        padding: 0;
+        margin-bottom: 6rem;
+        align-items: center;
+    }
+
+    .left-panel ul li {
+        margin-bottom: 0.4rem;
+        margin-left: 40px;
+        align-items: center;
+        list-style-type: none;
     }
 }
